--- a/main.tex
+++ b/main.tex
@@ -45,6 +45,9 @@
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\C}{\mathbb{C}}
 
+\newcommand{\zz}{\mathrm{Z\kern-.3em\raise-0.5ex\hbox{Z}}}   % "zu zeigen"-Zeichen Quelle: http://www.matheboard.de/archive/155832/thread.html
+
+
 \newcommand\danger[1][2ex]{%
   \renewcommand\stacktype{L}%
   \scaleto{\stackon[1.3pt]{\color{red}$\triangle$}{\tiny !}}{#1}   % Achtung Zeichen mit \danger
