--- a/kap10/kap10.tex
+++ b/kap10/kap10.tex
@@ -15,8 +15,10 @@
 Diese Eigenschaften können in der Mathematik genutzt werden, um Probleme zu lösen. Hierfür bedarf es einer einheitlichen Schreibweise.\\
 Insbesondere vor dem Abitur stehen den Schülern mehrere Möglichkeiten zur Verfügung, die im Folgenden behandelt werden.
 \subsection{Pseudocode}
-Pseudocode ist ein Programmcode, der nicht zur maschinellen Interpretation, sondern lediglich zur Veranschaulichung eines Algorithmus dient. Meistens ähnelt er höheren Programmiersprachen, gemischt mit natürlicher Sprache und mathematischer Notation.Er ist leichter verständlich als realer Programmcode aber klarer und weniger missverständlich als eine Beschreibung in natürlicher Sprache.\\
-Ein Beispiel erübrigt sich.
+Pseudocode ist ein Programmcode, der nicht zur maschinellen Interpretation, sondern lediglich zur Veranschaulichung eines Algorithmus dient. Meistens ähnelt er höheren Programmiersprachen, gemischt mit natürlicher Sprache und mathematischer Notation.Er ist leichter verständlich als realer Programmcode aber klarer und weniger missverständlich als eine Beschreibung in natürlicher Sprache.
+\begin{Beispiel}
+	Ein Beispiel erübrigt sich.
+\end{Beispiel}
 \subsection{Python}
 Programmiersprache, bekannt durch ihre einfach verständliche Syntax, sie gilt als höhere Sprache, was sie zu einer auf die (gesprochene) Sprache angepasste Sprache macht. Sie ist somit gerade für Einsteiger interessant und eignet sich dennoch für größere Projekte. Ein weiterer Vorteil ist die mitlerweile allgegenwärtige Präsenz der Sprache, denn sie wird auch für Apps und Webdevelopment verwendet.\\
 
@@ -45,17 +47,18 @@ Python verwendet Schleifen und Verzweigungen.\\
 	else: #(letzter Fall, tritt ein, wenn keine der obigen Bedingungen erfuellt wurde)
 		#Inhalt der Verzweigung
 \end{lstlisting}
-\subsubsection{Beispiel}
-Man nehme den Algorithmus, der die Fibonacci-Sequenz bis zum $n$-ten Glied generiert:\\
-\begin{lstlisting}[language=Python]
-	a = 0
-	b = 1
-	n = 10
-	for iteration in range(n):
-		print(a)
-		a = a+b
-		b = a-b
-\end{lstlisting}
+\begin{Beispiel}
+	Man nehme den Algorithmus, der die Fibonacci-Sequenz bis zum $n$-ten Glied generiert:\\
+	\begin{lstlisting}[language=Python]
+		a = 0
+		b = 1
+		n = 10
+		for iteration in range(n):
+			print(a)
+			a = a+b
+			b = a-b
+	\end{lstlisting}
+\end{Beispiel}
 \section{Algorithmen und mathematische Anwendungen}
 \subsection{Iterationsverfahren}
 Unter Iteration versteht man ein Verfahren zur schrittweisen Annäherung an die Lösung einer Gleichung unter Anwendung eines sich wiederholenden Rechengangs. Das bedeutet, (wenn es möglich ist) aus einer Näherungslösung durch Anwenden eines Algorithmus zu einer besseren Näherungslösung zu kommen und die Lösung beliebig gut an die exakte Lösung heranzuführen. Man sagt dann, dass die Iteration konvergiert.\\
