--- a/kap12/kap12.tex
+++ b/kap12/kap12.tex
@@ -13,7 +13,7 @@ a=e\\
 
 
 		\section{Wiederholung: Potenzgesetze}
-Seien $a$ und $b$ aus $\R$, sowie $n$ und $m$ aus $\N$, dann gilt:
+Seien $a$, $b\in\R$, sowie $n$, $m\in\N$, dann gilt:
 \begin{enumerate}
 \begin{minipage}{0.5\textwidth}
 \item$a^0=1$ (für $a\neq 0$)
@@ -38,10 +38,11 @@ $e = 2,71828182845904523536028747135266249775724709369995...$\\
 \\
 $e$ ist eine irrationale, transzendente und reelle Zahl, die die Basis des (natürlichen) Logarithmus und der (natürlichen) Exponentialfunktion ist.\\
 Die Darstellung, der man am Häufigsten begegnet ist diese:
-$e=\lim\limits_{n\to \infty}\left(1+\dfrac{1}{n}\right)^n;n\in\R$
+$e=\lim\limits_{t\to \infty}\left(1+\dfrac{1}{t}\right)^t;t\in\R$
 \end{Definition}
+\\
 Benannt nach dem bekannten Mathematiker Leonhard Euler ist diese Zahl eine der wichtigsten Konstanten der Mathematik.
-Sie ist die Basis des natürlichen Logarithmus und der natürlichen Exponentialfunktion. Diese (spezielle) Exponentialfunktion wird aufgrund dieser Beziehung zur Zahl $e$ häufig kurz $e$-Funktion genannt.
+Sie ist die Basis des natürlichen Logarithmus und der natürlichen Exponentialfunktion. Diese (spezielle) Exponentialfunktion wird aufgrund dieser Beziehung zur Zahl $e$ häufig kurz $e$-Funktion genannt.\\
 \begin{Definition}
   Eine reelle Zahl heißt (oder allgemeiner eine komplexe Zahl) transzendent,
   wenn sie nicht Nullstelle eines Polynoms mit ganzzahligen Koeffizienten ist.
@@ -115,6 +116,7 @@ Sei $f$ eine Funktion mit $f(x)=xe^{1-x}$ mit Schaubild $\mathcal{C}$\\
 f\prime(x)&=e^{1-x}-xe^{1-x}\\
 &=(1-x)\cdot e^{1-x}
 \end{align*}
+\\
 \begin{tabular}{rlcl}
 $\forall x<1$: &$f\prime(x)>0&&\Leftrightarrow f \nearrow$\\
 für $x=1$: &$f\prime(x)=0$&und VZW $+\rightarrow-&\Leftrightarrow$ Hochpunkt\\
@@ -123,41 +125,74 @@ $\forall x>1$: &$f\prime(x)<0 &&\Leftrightarrow f \searrow$\\
 \\
 
 Grenzwerte:\\
-$\lim\limits_{x\to +\infty}\underbrace{x}_{\rightarrow+\infty}\underbrace{e^{1-x}}_{\rightarrow0}=0$ (Croissance comparée)\\\\
-$\lim\limits_{x\to -\infty}\underbrace{x}_{\rightarrow-\infty}\underbrace{e^{1-x}}_{\rightarrow+\infty}=-\infty$
+\begin{itemize}
+\item$\lim\limits_{x\to +\infty}\underbrace{x}_{\rightarrow+\infty}\underbrace{e^{1-x}}_{\rightarrow0}=0$ (Croissance comparée)\\\\
+\item$\lim\limits_{x\to -\infty}\underbrace{x}_{\rightarrow-\infty}\underbrace{e^{1-x}}_{\rightarrow+\infty}=-\infty$\\
+\end{itemize}
 \item Hier Graph von f
-\item Man hat $I_1$,  das Integral mit $I_1=\int_0^1f(x)dx$\\
-\begin{minipage}{0.45\textwidth}
+\item Man hat $I_1$,  das Integral mit $I_1=\int_0^1f(x)\mbox{d}x$\\
+\begin{minipage}{0.5\textwidth}
 \begin{align*}
-I_1&=\int_0^1xe^{1-x}dx\\
-&=\left[-xe^{1-x}\right]_0^1-\int_0^1-e^{1-x}dx\\
+I_1&=\int_0^1xe^{1-x}\mbox{d}x\\
+&=\left[-xe^{1-x}\right]_0^1-\int_0^1-e^{1-x}\mbox{d}x\\
 &=-1e^{1-1}-0\cdote^1-\left[e^{1-x}\right]_0^1\\
 &=-1-1+e\\
 &=e-2
 \end{align*}
 \end{minipage}
+\begin{minipage}{0.5\textwidth}
+\begin{alignat*}{2}
+u(x)&=x \quad& u\prime(x)&=1\\
+v'(x)&=e^{1-x}\quad & v(x)&=-e^{1-x}
+\end{alignat*}
+\end{minipage}
+\end{enumerate}
+\underline{Teil B:}\\\\
+Sei $I_n$ das Integral mit $I_n=\int_0^1x^ne^{1-x}\mbox{d}x$, $n\geq 1$
+\begin{enumerate}
+\item %1
+\begin{enumerate}
+\item $\zz$: $\forall x\in[0;1]$ gilt $x^n\leq x^ne^{1-x} \leq ex^n$\\
+\begin{center}
+\begin{array}{cccccc}
+$x^n &\stackrel{?}{\leq}& x^ne^{1-x} &\stackrel{?}{\leq}& ex^n&\qquad|:x^n\\
+1        &\stackrel{!}{\leq}&e^{1-x}         &\stackrel{!}{\leq}&e        &$
+\end{array}
+\end{center}
+N.R.: für $x\in[0;1]$ ist $(1-x)\in[0;1]$ und entsprechen $e^{1-x}\in[e^{0};e^{1}]=[1;e]$
+\item Sei $J_n$ das Integral mit $J_n=\int_0^1x^n\mbox{d}x$
+\begin{align*}
+J_n&=\int_0^1x^n\mbox{d}x\\
+&=\left[\dfrac{1}{n+1}\cdot x^{n+1}\right]_0^1\\
+&=\dfrac{1^{n+1}}{n+1}-\dfrac{0^{n+1}}{n+1}\\
+&=\dfrac{1}{n+1}
+\end{align*}
+\item $\zz$: $\forall n\geq1$ gilt $\dfrac{1}{n+1}\leq I_n \leq \dfrac{e}{n+1}$\\\\
+\begin{center}
+\begin{array}{ccccccl}
+$&x^n&\leq& f(x)=x^ne^{1-x}&\leq& ex^n& \qquad\qquad|\int_0^1()\mbox{d}x\\\\
+\Leftrightarrow&\int_0^1 x^n\mbox{d}x &\leq& I_n &\leq& \int_0^1 ex^n\mbox{d}x&\\\\
+\Leftrightarrow&J_n &\leq& I_n &\leq& e\cdot\int_0^1x^n\mbox{d}x=e\cdot J_n&\\\\
+\Leftrightarrow&\dfrac{1}{n+1}&\leq& I_n &\leq&  \dfrac{e}{n+1}&$
+\\\\
+\end{array}
+\end{center}
+\end{enumerate}
+\item $\zz$: $\forall n\geq 1$ gilt $I_{n+1}=(n+1)I_n-1$\\
 \begin{minipage}{0.55\textwidth}
 \begin{align*}
-u(x)&=x & u\prime(x)&=1\\
-v'(x)&=e^{1-x} & v(x)&=-e^{1-x}
+I_{n+1}&=\int_0^1x^{n+1}\cdot e^{1-x}\mbox{d}x\\
+&=\left[-e^{1-x}\cdot x^{n+1}\right]_0^1-\int_0^1-(n+1)x^ne{x-1}\mbox{d}x\\
+&=-e^{1-1}\cdot 1^{n+1}-0+(n+1)\cdot I_n\\
+&=(n+1)I_n-1
 \end{align*}
-\end{minipage}{0.5\textwidth}
-\end{enumerate}
-\underline{Teil B}\\\\
-Sei $I_n$ das Integral mit $I_n=\int_0^1x^ne^{1-x}dx$, $n\geq 1$
-\begin{enumerate}
-\item
-\begin{enumerate}
-\item \zz: $\forall x\in[0;1]$ gilt $x^n\leq x^ne^{1-x} \leq ex^n$\\
-\begin{align*}
-x^n &\stackrel{?}{\leq} x^ne^{1-x} &\stackrel{?}{\leq} ex^n\;|:x^n\\
-1&\stackrel{!}{\leq}e^{1-x}&\stackrel{!}{\leq}e
-\end{align*}
-
-\item%1b
-\item%1c
-\end{enumerate}
-\item%2
+\end{minipage}
+\begin{minipage}{0.45\textwidth}
+\begin{alignat*}{2}
+u(x)&=x^{n+1}\quad& u\prime(x)&=(n+1)x^n\\
+v'(x)&=e^{1-x}\quad & v(x)&=-e^{1-x}
+\end{alignat*}
+\end{minipage}
 \item%3
 \begin{enumerate}
 \item%3a
