--- a/kap13/kap13.tex
+++ b/kap13/kap13.tex
@@ -17,10 +17,10 @@ $b$ nennt man \textit{Basis} oder \textit{Grundzahl}, sie ist für jede Funktion
 Hier Graphen
 \subsubsection{Besondere Logarithmen}
 
-\begin{tabular}{rccl}
-Logarithmus naturalis:&$\ln a$&$:=$&$\log_ea$\\
-Logarithmus dualis:&$ld\:a$&$:=$&$\log_2a$\\
-Dekadischer Logarithmus:&$\lg a$&$:=$&$\log_{10}a
+\begin{tabular}{lcccl}
+Logarithmus naturalis&:&$\ln a$&$:=$&$\log_ea$\\
+Logarithmus dualis&:&$\ld a$&$:=$&$\log_2a$\\
+Dekadischer Logarithmus&:&$\lg a$&$:=$&$\log_{10}a
 \end{tabular}
 \\
 	\section{Eigenschaften}	
