--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[11p,a4paper]{report}
+\documentclass[11p,a4paper,fleqn]{report}
 
 \usepackage{amsmath}		                      %Matheschreibweise...
 \usepackage{amssymb}                              %...Und Symbole
@@ -29,7 +29,7 @@
 \usepackage{scalerel}
 \usepackage{xcolor}
 \usepackage{epigraph}
-\usepackage{array}
+\usepackage{array}			%Gleichungen mit mehr als einem Zeichen in der Zeile oder Tabellen
 
 % \pgfplotsset{compat=1.15}
 \usetikzlibrary{arrows}
